# code-fights

./: .tm_properties  CMakeLists.txt
cmake/: CMakeDetermineGoCompiler.cmake  CMakeDetermineRustCompiler.cmake  CMakeGoCompiler.cmake.in  CMakeGoInformation.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake
source/: glasses-closedform.cpp  glasses.cpp  transformLetters.cpp  uShouldDate.cpp
source/cpp/: A_Star.cpp  Labyrinth.cpp  Layberinth.cpp  SumOfDigits2.cpp  caesarian.cpp  conwaysVariationsOfLife.cpp  glasses.cpp  square-diff.cpp
source/go/: glasses.go  transformLetters.go
